[package]
name = "ark-r1cs-std"
version = "0.4.0"
authors = [ "arkworks contributors" ]
description = "A standard library for constraint system gadgets"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/r1cs-std"
documentation = "https://docs.rs/ark-r1cs-std/"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK", "r1cs"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
resolver = "2"

[dependencies]
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }

educe = "0.6.0"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-integer = { version = "0.1.44", default-features = false }

[dev-dependencies]
ark-test-curves = { version = "0.4.0", default-features = false, features = ["bls12_381_scalar_field", "bls12_381_curve", "mnt4_753_scalar_field"] }
ark-poly = { version = "0.4.0", default-features = false }
paste = "1.0"
ark-bls12-377 = { version = "0.4.0", features = ["curve"], default-features = false  }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false  }
ark-mnt4-298 = { version = "0.4.0", features = ["curve"], default-features = false  }
ark-mnt4-753 = { version = "0.4.0", features = ["curve"], default-features = false  }
ark-mnt6-298 = { version = "0.4.0", default-features = false  }
ark-mnt6-753 = { version = "0.4.0", default-features = false  }
ark-pallas = { version = "0.4.0", features = ["curve"],  default-features = false  }
ark-bn254 = { version = "0.4.0", features = ["curve"], default-features = false  }

[features]
default = ["std"]
std = [ "ark-ff/std", "ark-relations/std", "ark-std/std", "num-bigint/std" ]
parallel = [ "std", "ark-ff/parallel", "ark-std/parallel"]

[[bench]]
name = "emulated-bench"
path = "benches/bench.rs"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }

[patch.crates-io]
ark-test-curves = { path = "../ark-algebra/test-curves" }
ark-r1cs-std = { path = "../ark-r1cs-std" }
ark-ff = { path = "../ark-algebra/ff" }
ark-ec = { path = "../ark-algebra/ec" }
ark-serialize = { path = "../ark-algebra/serialize" }
ark-std = { path = "../ark-std" }
ark-bls12-381  = { path = "../ark-algebra/curves/bls12_381" }
ark-bn254 = { path = "../ark-algebra/curves/bn254" }
ark-bls12-377 = {  path = "../ark-algebra/curves/bls12_377" }
ark-mnt4-298 = { path = "../ark-algebra/curves/mnt4_298" }
ark-mnt4-753 = { path = "../ark-algebra/curves/mnt4_753" }
ark-mnt6-298 = {  path = "../ark-algebra/curves/mnt6_298" }
ark-mnt6-753 = { path = "../ark-algebra/curves/mnt6_753" }
ark-pallas = { path = "../ark-algebra/curves/pallas" }
ark-groth16 = { path = "../ark-groth16" }
ark-snark = { path = "../ark-snark/snark" }
ark-poly = { path = "../ark-algebra/poly" }
ark-relations = {  path = "../ark-snark/relations" }
ark-crypto-primitives = { path = "../ark-crypto-primitives/crypto-primitives" }
